--- a/web/query.html
+++ b/web/query.html
@@ -259,13 +259,16 @@
 
 <script type="text/javascript">
 
-    var _csvResource = "./assets/" + "SlovakianDemoSparqlQueries.csv";
-    var _editorEndpoint = 'http://demos.gsi.dit.upm.es/fuseki/geo/query?query=';
+    var _editorEndpoint = 'http://dbpedia.org/sparql?default-graph-uri=http%3A%2F%2Fdbpedia.org&query=';
     var myEl2 = document.getElementById('querySelector');
-    var parsedData = JSON.parse(localStorage.getItem("querysSaved")) || {};
+    var parsedData = {};
+    $.getJSON("querys.json", function (data) {
+        parsedData = data;
+        if(localStorage.getItem('querysSaved').length != 0)
+            parsedData.push(JSON.parse(localStorage.getItem('querysSaved')));
+    });
 
     //configuration
-    var queries = [];
     var yasqe = YASQE(document.getElementById("yasqe"), {
         sparql: {
             showQueryButton: false,
@@ -286,95 +289,11 @@
         //this way, the URLs in the results are prettified using the defined prefixes in the query
         getUsedPrefixes: yasqe.getPrefixesFromQuery
     });
-    // end of configuration
 
-    //This function parse the csv table to take its data.
-    var googleSpreadsheetURI = "" + _csvResource;
-    Papa.parse(
-            googleSpreadsheetURI, {
-                download: true,
-                complete: function (json) {
-                    // here populate the list from the json data
-                    var paramNo;
-                    for (var i = 1; i < json.data.length; i++) {
-                        //How many params?
-                        paramNo = 0;
-                        try {
-                            paramNo = parseInt(json.data[i][5], 10);
-                        } catch (e) {
-                        }
-                        queries.push({
-                            linkedResources: json.data[i][0],
-                            showInDemo: json.data[i][1].trim(),
-                            name: json.data[i][2],
-                            queryTemplate: json.data[i][3],
-                            description: json.data[i][4],
-                            paramNo: paramNo,
-                            paramNames: json.data[i][6]
-                        });
-                        //Here we add a variable number of parameter rows, each with its values,
-                        //in the format: param0, param1...
-                        for (var j = 0; j < paramNo; j++) {
-                            queries[i - 1]["param" + j] = json.data[i][7 + j];
-                        }
-                    }
-                    //Here we populate the query form selector with query names
-                    var queryAux;
-                    for (i = 0; i < queries.length; i++) {
-                        queryAux = queries[i];
-                        if (queryAux.showInDemo == "yes") {
-                            $("#querySelector").append('<option style="width: 50%;" value="' + i + '">' + queryAux.name + "</option>");
-                            //$("#queryName").append('<option value="'+i+'">'+ (i+2) +" "+query.name+"</option>");
-                        }
-                    }
-                    $("#querySelector").change();
-                }
-            });
     $("#queryButton").click(function (e) {
         e.preventDefault();
         executeQuery();
     });
-
-    //Receives the id of the selector and populate it with the values of the corresponding parameter
-    function populateParametersSelector(id, values) {
-
-        values = values.split(",");
-
-        //$(id).append('<option value="">choose parameters</option>');
-        for (var i = 0; i < values.length; i++) {
-            $(id).append('<option style="width: 50%" value="' + values[i].trim() + '">' + values[i].trim() + "</option>");
-        }
-    }
-
-    var onSelectorChange = function (selectorOrder) {
-        console.log("selectorOnChange for selector with order: " + selectorOrder);
-        // update the query template using selected parameters
-        var i = $("#querySelector").val();
-        var query = queries[i];
-        var queryTemplate = query.queryTemplate.trim();
-        var paramNo = query.paramNo;
-        var paramNames = query.paramNames;
-        var pNames = paramNames.trim().split(/\s+/);
-        var selectedParameters = "";
-        //Now we compose a string with the selected parameters (or the param name if not chosen yet)
-        for (var i = 0; i < paramNo; i++) {
-            if ($("#selector" + i).val() == "") {
-                selectedParameters += "<" + pNames[i] + "> ";
-                console.log("empty parameter");
-            }
-            else {
-                console.log("value selected: " + document.getElementById("selector" + i).value);
-                //var values = query['param'+i].split(",");
-                selectedParameters += (document.getElementById("selector" + i).value + " ");
-            }
-
-        }
-        console.log(selectedParameters);
-        //selectedParameters = $("#paramSelector").val();
-        //var paramDefinition = query.paramNames;
-        queryTemplate = populateQueryWithStaticParams(queryTemplate, paramNames, selectedParameters, paramNo);
-        yasqe.setValue(queryTemplate);
-    };
 
     //ExecuteQuery function. Still not generalized, it takes "restaurants" info from our endpoint at gsi's alpha
     function executeQuery() {
@@ -419,71 +338,43 @@
         return false;
     };
 
-    //This function takes a list of parameter names and another list of parameters values.
-    //Then looks for every parameter name in the query code and replace it with its parameter value.
-    //parameterValues is a string containing all parameters values selected one after another ex:["Salamanca queso barato"]
-    function populateQueryWithStaticParams(query, parameterNames, parameterValues) {
-        var pValues = parameterValues.trim().split(/\s+/);
-        var pNames = parameterNames.trim().split(/\s+/);
-
-
-        for (i = 0; i < pNames.length; i++) {
-            var re = new RegExp("<" + pNames[i] + ">", "g");
-            query = query.replace(re, pValues[i]);
-        }
-        return query;
-    }
-
-
-    $("#querySelector").change(function () {
+    function populateQueryWithParams(){
         // update param list
         var j;
         for(j = 0; j<myEl2.length; j++){
             if(parsedData[j] != undefined ) {
-                if (myEl2.options[myEl2.selectedIndex].text == parsedData[j]["Name"]) {
-                    yasqe.setValue(parsedData[j].Query);
+                if (myEl2.value == parsedData[j]["Name"]) {
+                    var start = myEl2.value.indexOf("<");
+                    var end = myEl2.value.indexOf(">");
+                    var paramValue = myEl2.value.substring(start, end+1);
+                    var query = parsedData[j]["Query"];
                     $("#paramSelector").empty();
-                    if(parsedData[j].Parameters.length != 0) {
+                    if(parsedData[j]["Parameters"].length != 0) {
                         var id = "selector";
                         $("#paramSelector").append("<select style='width: 50%;' class=form-control id=" + id + ">");
-                        for (var i = 0; i < parsedData[j].Parameters.length; i++) {
-                            $("#selector").append('<option style="width: 50%; font-weight: bold;" value="' + parsedData[j].Parameters[i] + '"><strong>' + parsedData[j].Parameters[i] + "</strong></option>");
+                        for (var i = 0; i < parsedData[j]["Parameters"].length; i++) {
+                            $("#selector").append('<option style="width: 50%; font-weight: bold;" value="' + parsedData[j]["Parameters"][i] + '"><strong>' + parsedData[j].Parameters[i] + "</strong></option>");
                         }
+                        var selectedParameters = document.getElementById("selector").value;
+                        query = query.replace(paramValue, selectedParameters);
+                        paramValue = selectedParameters;
+                        $("#selector").change(function () {
+                            var selectedParameters = document.getElementById("selector").value;
+                            query = query.replace(paramValue, selectedParameters);
+                            paramValue = selectedParameters;
+                            yasqe.setValue(query);
+                        });
                     }
+
+                    yasqe.setValue(query);
                     return;
                 }
             }
         }
-        var i = $("#querySelector").val();
-        var query = queries[i];
-        var paramNo = query.paramNo;
-        var description = query.description;
-        var queryTemplate = query.queryTemplate.trim();
-        var paramNames = query.paramNames;
+    }
 
-
-        //put template query into the box (without replacing the parameters in the text)
-        yasqe.setValue(queryTemplate);
-        $("#description").text(description);
-
-        //Create as many selectors as params for the selected query
-        $("#paramSelector").empty();
-        for (var i = 0; i < paramNo; i++) {
-            var id = "selector" + i;
-            var selectorAux = $("#paramSelector").append("<select style='width: 50%;' class=form-control id=" + id + ">");
-            $("#selector" + i).append('<option style="width: 50%; font-weight: bold;" value="' + paramNames.split(" ")[i] + '"><strong>' + paramNames.split(" ")[i] + "</strong></option>");
-
-            //populate the selector with its parameter values
-            populateParametersSelector("#selector" + i, query["param" + i]);
-
-            //assign onChange function, we pass the index of the option chosen
-            $("#selector" + i).change(function (handler) {
-                //console.log("selectorOnChange for selector with id: " + handler.srcElement.attributes.id.value);
-                onSelectorChange(handler.currentTarget.attributes.id.value.slice(-1));
-            });
-
-        }
-
+    $("#querySelector").change(function () {
+        populateQueryWithParams();
     });
 
 
