--- a/web/polymer-elements/line-chart/line-chart.html
+++ b/web/polymer-elements/line-chart/line-chart.html
@@ -17,6 +17,8 @@
             chart: {},
             dimension: {},
             group: {},
+            xMin: 0,
+            xMax: 100,
 
             ready: function() {
                 console.log("line-chart ready");
@@ -24,14 +26,52 @@
 
             init: function () {
 
-                this.chart = dc.pieChart("#chart");
+//                var data = [
+//                    {date: "12/27/2012", http_404: 2, http_200: 190, http_302: 100},
+//                    {date: "12/28/2012", http_404: 2, http_200: 10, http_302: 100},
+//                    {date: "12/29/2012", http_404: 1, http_200: 300, http_302: 200},
+//                    {date: "12/30/2012", http_404: 2, http_200: 90, http_302: 0},
+//                    {date: "12/31/2012", http_404: 2, http_200: 90, http_302: 0},
+//                    {date: "01/01/2013", http_404: 2, http_200: 90, http_302: 0},
+//                    {date: "01/02/2013", http_404: 1, http_200: 10, http_302: 1},
+//                    {date: "01/03/2013", http_404: 2, http_200: 90, http_302: 0},
+//                    {date: "01/04/2013", http_404: 2, http_200: 90, http_302: 0},
+//                    {date: "01/05/2013", http_404: 2, http_200: 90, http_302: 0},
+//                    {date: "01/06/2013", http_404: 2, http_200: 200, http_302: 1},
+//                    {date: "01/07/2013", http_404: 1, http_200: 200, http_302: 100}
+//                ];
+//                var ndx = crossfilter(data);
+//                var parseDate = d3.time.format("%m/%d/%Y").parse;
+//                data.forEach(function(d) {
+//                    d.date = parseDate(d.date);
+//                    d.total= d.http_404+d.http_200+d.http_302;
+//                });
+//                //print_filter("data");
+//                var dateDim = ndx.dimension(function(d) {return d.date;});
+//                var hits = dateDim.group().reduceSum(function(d) {return d.total;});
+//                var hits = dateDim.group().reduceSum(dc.pluck('total'));
+//                var minDate = dateDim.bottom(1)[0].date;
+//                var maxDate = dateDim.top(1)[0].date;
+                this.chart  = dc.lineChart("#chart");
+
                 this.chart
-                        .width(250).height(250)
+                        .width(500).height(200)
                         .dimension(this.dimension)
                         .group(this.group)
-                        .innerRadius(30)
+                        .x(d3.scale.linear().domain([this.xMin, this.xMax]))
                         .root()[0][0] = this.$.chart; //we pass explicitly the root div to dc.js
-                this.$.chart.classList.add("dc-chart"); //add the dc-chart to allow dc.js to style the chart
+                this.$.chart.classList.add("dc-chart"); //add the dc-chart to allow dc.js to style the chart;
+
+
+
+//                this.chart = dc.pieChart("#line-chart");
+//                this.chart
+//                        .width(250).height(250)
+//                        .dimension(this.dimension)
+//                        .group(this.group)
+//                        .innerRadius(30)
+//                        .root()[0][0] = this.$.chart; //we pass explicitly the root div to dc.js
+//                this.$.chart.classList.add("dc-chart"); //add the dc-chart to allow dc.js to style the chart
 
                 //dc.renderAll();
             }
