--- a/web/newquery.html
+++ b/web/newquery.html
@@ -140,7 +140,18 @@
                             </button>
 
                             <paper-action-dialog class="size-position" backdrop autoCloseDisabled layered="false">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                <h3>Add Query</h3>
+                                <ol>Standard Users
+                                    <li> Give it a name </li>
+                                    <li> Write the query in Sparql </li>
+                                    <li> Save it</li>
+                                    <br>
+                                Only Advanced Users
+                                    <li> Write parameters between "< >" in the name and query </li>
+                                    <li> Active Advanced Toggle </li>
+                                    <li> Set values of the selected parameter
+                                        in the form and click the green checked button or press enter</li>
+                                </ol>
 
                                 <paper-button affirmative autofocus>Tap me to close</paper-button>
                             </paper-action-dialog>
@@ -163,7 +174,7 @@
                 <div center horizontal layout>
                     <paper-input-decorator style="width: 70%; margin-right: 100px" label="Name of query"
                                            class="custom" floatingLabel>
-                        <input is="core-input" id="queryNameSelector" ng-model="name">
+                        <input is="core-input" id="queryNameSelector" ng-blur="listParams()" ng-model="name">
                     </paper-input-decorator>
 
                     <section style="margin-right: 20px; margin-top: 15px">
@@ -175,8 +186,11 @@
                 <div id="params" horizontal layout>
                     <paper-button id="addParam">
                         <core-icon icon="add"></core-icon>
-                        <span style="vertical-align:middle;">add parameter</span>
+                        <span style="vertical-align:middle;">add values</span>
                     </paper-button>
+                    <select style="width: 20%;" class="form-control" ng-change="update()" id="paramSelector">
+                        <option ng-repeat="param in parameters" ng-value="param">{{param}}</option>
+                    </select>
                     <div id="paramName" horizontal layout>
                         <paper-input-decorator style="margin-top: -10px;" label="Name of parameters" class="custom">
                             <input is="core-input" ng-keypress="saveParams($event)" ng-model="params" id="queryParams">
@@ -188,10 +202,10 @@
                 </div>
 
                 <div id="paramList" flex>
-                    <div ng-repeat="param in parameters">
+                    <div ng-repeat="param in parametersShow">
                         <div id="{{param}}">
                             <paper-shadow class="elementList" z="1">
-                                 {{param}}
+                                {{param}}
                                 <button ng-click="removeParam(param)" class="fa fa-times"></button>
                             </paper-shadow>
                         </div>
@@ -206,6 +220,17 @@
                     <div id="yasqe" style="padding-bottom: 15px"></div>
                 </paper-shadow>
                 <input type="hidden" class="form-control" id="querySelector" ng-model="query">
+                <div class="alert alert-danger alert-dismissable hide" id="saveError">
+                    <i class="fa fa-ban"></i>
+
+                    <b>Save failed</b>
+                </div>
+
+                <div class="alert alert-success alert-dismissable hide" id="saveSuccess">
+                    <i class="fa fa-check"></i>
+
+                    <b>Saved successfully</b>
+                </div>
                 <div class="save_btnGroup">
                     <paper-button raised class="colored" id="btn_save" ng-click="saveData()">Save</paper-button>
                     <paper-button raised class="colored" id="btn_clear" ng-click="clearFilters()">Clear</paper-button>
@@ -302,6 +327,8 @@
     myEl.addEventListener('click', function() {
         var _query = yasqe.getValue();
         myEl2.value= _query;
+        $("#saveSuccess").addClass("hide");
+        $("#saveError").addClass("hide");
         yasqe.setValue('');
     }, false);
     myEl3.addEventListener('click', function() {
@@ -401,6 +428,7 @@
     var paramsDiv = document.getElementById('params');
     var paramNewDiv = document.getElementById('paramName');
     var paramList = document.getElementById('paramList');
+    var paramSelector = document.getElementById('paramSelector');
     var addParam = document.querySelector('#addParam');
     toggle.addEventListener('change', function () {
         if (this.checked) {
@@ -409,14 +437,15 @@
         } else {
             paramsDiv.style.display = 'none';
             paramList.style.display = 'none';
-            valueList.style.display = 'none';
         }
     });
     addParam.addEventListener('click', function () {
         if (paramNewDiv.style.display != 'flex') {
             paramNewDiv.style.display = 'flex';
+            paramSelector.style.display = 'flex';
         } else {
             paramNewDiv.style.display = 'none';
+            paramSelector.style.display = 'none';
         }
     });
 
