-Added shadow effect in app bar

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -72,6 +72,7 @@
     <link rel="stylesheet"
           href="bower_components/sortable-table/css/bootstrap.css" shim-shadowdom>
     <link rel="import" href="polymer-elements/faceted-search/faceted-search.html">
+    <link rel="import" href="polymer-elements/paper-shadow/paper-shadow.html">
 
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
