-Verify Parameters in name and query

--- a/web/newquery.html
+++ b/web/newquery.html
@@ -144,7 +144,7 @@
                                 <ol>Standard Users
                                     <li> Give it a name </li>
                                     <li> Write the query in Sparql </li>
-                                    <li> Save it</li>
+                                    <li> Save it*</li>
                                     <br>
                                 Only Advanced Users
                                     <li> Write parameters between "< >" in the name and query </li>
@@ -153,6 +153,7 @@
                                         in the form and click the green checked button or press enter</li>
                                 </ol>
 
+                                <h5>*If an error occurs saving data, check syntax parameters</h5>
                                 <paper-button affirmative autofocus>Tap me to close</paper-button>
                             </paper-action-dialog>
 
